fix bg wrap cut off

--- a/media/style.css
+++ b/media/style.css
@@ -97,7 +97,6 @@ footer {
 #articles {
   text-align: center;
   background-color: #ededed;
-  border-bottom: 2px solid #707070;
 }
 
 #container {
